--- a/styles/index.css
+++ b/styles/index.css
@@ -12,17 +12,28 @@
 --Orange: hsl(25, 97%, 53%);
 */
 
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    font-family: 'Overpass', sans-serif;
+    color: var(--White);
     background-color: var(--Very-Dark-Blue);
 }
 
 .card {
-    height: 60vh;
-    width: 90vw;
+    height: 340px;
+    width: 300px;
     border-radius: 14px;
+    padding: 26px;
     background-color: var(--Dark-Blue);
 }
