--- a/styles/index.css
+++ b/styles/index.css
@@ -3,15 +3,6 @@
 @import url(./CardRating.css);
 @import url(./CardThankyou.css);
 
-/* 
---White: hsl(0, 0%, 100%);
---Light-Grey: hsl(217, 12%, 63%);
---Medium-Grey: hsl(216, 12%, 54%);
---Dark-Blue: hsl(213, 19%, 18%);
---Very-Dark-Blue: hsl(216, 12%, 8%);
---Orange: hsl(25, 97%, 53%);
-*/
-
 * {
     margin: 0px;
     padding: 0px;
@@ -31,9 +22,15 @@ body {
 }
 
 .card {
-    height: 340px;
-    width: 300px;
+    width: 336px;
     border-radius: 14px;
-    padding: 26px;
-    background-color: var(--Dark-Blue);
+    padding: 32px 20px;
+    margin-bottom: 28px;
+    background-color: var(--Darker-Blue);
+}
+
+.text {
+    font-size: 15px;
+    font-weight: 400;
+    color: var(--Light-Grey);
 }
