--- a/styles/vars.css
+++ b/styles/vars.css
@@ -2,7 +2,8 @@
     --White: hsl(0, 0%, 100%);
     --Light-Grey: hsl(217, 12%, 63%);
     --Medium-Grey: hsl(216, 12%, 54%);
-    --Dark-Blue: hsl(213, 19%, 18%);
+    --Dark-Blue: hsl(212, 23%, 22%);
+    --Darker-Blue: hsl(215, 29%, 13%);
     --Very-Dark-Blue: hsl(216, 12%, 8%);
     --Orange: hsl(25, 97%, 53%);
 }
