--- a/styles/CardRating.css
+++ b/styles/CardRating.css
@@ -1,7 +1,7 @@
 
 .card.rating {
-    display: none;
-    /* display: flex; */
+    /* display: none; */
+    display: flex;
     flex-direction: column;
 }
 
