--- a/styles/CardThankyou.css
+++ b/styles/CardThankyou.css
@@ -1,7 +1,7 @@
 
 .card.thankyou {
-    /* display: none; */
-    display: flex;
+    display: none;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     text-align: center;
